fix: add overflow-x hidden for both html and body, adjust bg blur position and small sass refactor

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -67,10 +67,12 @@ $color-gray-3: #626687;
 
 html {
   font-size: 62.5%; //1rem =10, 10px/16px = 62.5%
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Lexend", sans-serif;
+  overflow-x: hidden;
 }
 
 button {
