--- a/sass/_tour-section.scss
+++ b/sass/_tour-section.scss
@@ -140,7 +140,7 @@
   &--2 {
     position: absolute;
     z-index: -10;
-    right: -25%;
+    right: -20%;
     top: -60%;
   }
 }
